--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "csv-parser": "^3.2.0",
     "eslint": "^9.32.0",
     "eslint-config-next": "15.4.5",
     "postcss": "^8.5.6",
