--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "postinstall": "pnpm prisma generate",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:format": "prisma format",
@@ -65,7 +65,7 @@
     "js-tiktoken": "^1.0.20",
     "langsmith": "^0.3.50",
     "lucide-react": "^0.536.0",
-    "next": "15.4.5",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
     "openai": "^5.12.0",
     "react": "^19.1.1",
@@ -89,8 +89,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "csv-parser": "^3.2.0",
-    "eslint": "^9.32.0",
-    "eslint-config-next": "15.4.5",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
     "prisma": "^6.14.0",
     "prisma-dbml-generator": "^0.12.0",
